# Rust_SQL_DB

./: Readme.md
antimetaldb_core/: Cargo.toml
antimetaldb_core/src/: datatype.rs
antimetaldb_parser/: Cargo.toml
antimetaldb_parser/src/: lib.rs
coredb/src/: json_result.rs
