# [package]
# name = "anitmetaldb-parser"
# version = "0.1.2"
# edition = "2024"
# description = "SQL parser for SteelDB"
# license = "Apache-2.0"
# repository = "https://github.com/paolorechia/steeldb/tree/main/steeldb-parser"
# authors = ["Paolo Rechia"]

# [dependencies]
# lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }

# # Add a build-time dependency on the lalrpop library:
# [build-dependencies]
# lalrpop = { version = "0.20.0", features = ["lexer", "unicode"] }